--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TubeManager AI - Your AI-Powered YouTube Growth System</title>
 
+    <!-- Facebook Domain Verification -->
+    <meta name="facebook-domain-verification" content="dzr7x1uv05lr8fouxs6o6jsqtfwwjq" />
+
     <!-- Meta Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
