--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-5JLKGHNZ');</script>
     <!-- End Google Tag Manager -->
+    <!-- LinkedIn Insight Tag -->
+    <script type="text/javascript">
+    _linkedin_partner_id = "8853036";
+    window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+    window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+    </script><script type="text/javascript">
+    (function(l) {
+    if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+    window.lintrk.q=[]}
+    var s = document.getElementsByTagName("script")[0];
+    var b = document.createElement("script");
+    b.type = "text/javascript";b.async = true;
+    b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+    s.parentNode.insertBefore(b, s);})(window.lintrk);
+    </script>
+    <!-- End LinkedIn Insight Tag -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TubeManager AI - Your AI-Powered YouTube Growth System</title>
@@ -1366,6 +1382,11 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5JLKGHNZ"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <!-- LinkedIn Insight Tag (noscript) -->
+    <noscript>
+    <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=8853036&fmt=gif" />
+    </noscript>
+    <!-- End LinkedIn Insight Tag (noscript) -->
     <!-- Navigation -->
     <nav>
         <div class="nav-content">
