--- a/index.html
+++ b/index.html
@@ -1799,6 +1799,9 @@
                 currency: 'USD'
             });
 
+            // LinkedIn Insight Tag - Conversion
+            window.lintrk('track', { conversion_id: 24274764 });
+
             console.log('📊 GA Event: get_started_click from', location);
             console.log('📘 Meta Pixel: AddToCart');
             openModal('bundle');
@@ -1821,6 +1824,9 @@
                 value: 35.00,
                 currency: 'USD'
             });
+
+            // LinkedIn Insight Tag - Conversion
+            window.lintrk('track', { conversion_id: 24274764 });
 
             console.log('📊 GA Event: get_bundle_click');
             console.log('📘 Meta Pixel: AddToCart - Bundle $35');
